--- a/index.html
+++ b/index.html
@@ -25,113 +25,21 @@
         <div class="products">
             <h2 class="call-action">Primeiro, seu prato</h2>
             <ul class="list-products">
-                <li class="card-product">
+                <li class="card-product" onClick="selectProduct()">
                     <img src="img/pizza.jpeg" class="img-product">
                     <p class="name-product">Pizzaaa</p>
                     <p class="description-product">Massa, queijo, tomate e manjericão (mato)</p>
-                    <p class="price-product">R$ 14,90</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/pizza.jpeg" class="img-product">
-                    <p class="name-product">Pizzaaa</p>
-                    <p class="description-product">Massa, queijo, tomate e manjericão (mato)</p>
-                    <p class="price-product">R$ 14,90</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/pizza.jpeg" class="img-product">
-                    <p class="name-product">Pizzaaa</p>
-                    <p class="description-product">Massa, queijo, tomate e manjericão (mato)</p>
-                    <p class="price-product">R$ 14,90</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/pizza.jpeg" class="img-product">
-                    <p class="name-product">Pizzaaa</p>
-                    <p class="description-product">Massa, queijo, tomate e manjericão (mato)</p>
-                    <p class="price-product">R$ 14,90</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/pizza.jpeg" class="img-product">
-                    <p class="name-product">Pizzaaa</p>
-                    <p class="description-product">Massa, queijo, tomate e manjericão (mato)</p>
-                    <p class="price-product">R$ 14,90</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/pizza.jpeg" class="img-product">
-                    <p class="name-product">Pizzaaa</p>
-                    <p class="description-product">Massa, queijo, tomate e manjericão (mato)</p>
-                    <p class="price-product">R$ 14,90</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/pizza.jpeg" class="img-product">
-                    <p class="name-product">Pizzaaa</p>
-                    <p class="description-product">Massa, queijo, tomate e manjericão (mato)</p>
-                    <p class="price-product">R$ 14,90</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/pizza.jpeg" class="img-product">
-                    <p class="name-product">Pizzaaa</p>
-                    <p class="description-product">Massa, queijo, tomate e manjericão (mato)</p>
-                    <p class="price-product">R$ 14,90</p>
+                    <div class="price-plus-icon">
+                        <p class="price-product">R$ 14,90</p>
+                        <ion-icon name="checkmark-circle" class="check-selection"></ion-icon>
+                    </div>
+                    
                 </li>
             </ul>
         </div>
         <div class="products">
             <h2 class="call-action">Agora, sua bebida</h2>
             <ul class="list-products">
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/coca-cola-café.jpeg" class="img-product">
-                    <p class="name-product">Coca-Cola de Café</p>
-                    <p class="description-product">Uma coquinha de café expresso é top</p>
-                    <p class="price-product">R$ 1,99</p>
-                </li>
                 <li class="card-product">
                     <img src="img/coca-cola-café.jpeg" class="img-product">
                     <p class="name-product">Coca-Cola de Café</p>
@@ -149,72 +57,19 @@
                     <p class="description-product">Hmm... docinho bom</p>
                     <p class="price-product">R$ 11,00</p>
                 </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
-                <li class="card-product">
-                    <img src="img/mousse.jpeg" class="img-product">
-                    <p class="name-product">Mousse de Maracujá</p>
-                    <p class="description-product">Hmm... docinho bom</p>
-                    <p class="price-product">R$ 11,00</p>
-                </li>
             </ul>
         </div>
         
     </div>
 
     <div class="bottom-button">
-
+        <button class="checkout enabled" onClick="">Fechar pedido</button>
     </div>
 
 
 
     <!-- JS Scripts-->
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
