--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div>
 
     <div class="bottom-button">
-        <button class="checkout enabled" onClick="">Fechar pedido</button>
+        <button class="checkout disabled" onClick="sendWpp()"></button>
     </div>
 
 
